--- a/example.css
+++ b/example.css
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 body {
   display: flex;
   justify-content: center;
@@ -23,21 +24,26 @@ body {
   height: calc(100% - 50px);
 }
 
-/* [data-media-container*=">=992"] .box {
+/*
+.container[data-media-container*=">=992"] .box {
   background-color: red;
 }
-[data-media-container*=">=1200"] .box {
+.container[data-media-container*=">=1200"] .box {
   background-color: purple;
-} */
-[data-media-container*="<1439"] .box {
+} 
+*/
+.container[data-media-container*="<1439"] .box {
   background-color: yellow;
 }
-[data-media-container*="<1279"] .box {
+
+.container[data-media-container*="<1279"] .box {
   background-color: pink;
 }
-[data-media-container*="<1199"] .box {
+
+.container[data-media-container*="<1199"] .box {
   background-color: skyblue;
 }
-[data-media-container*="<991"] .box {
+
+.container[data-media-container*="<991"] .box {
   background-color: tomato;
 }
