--- a/example.css
+++ b/example.css
@@ -22,6 +22,7 @@ body {
   display: flex;
   justify-content: center;
   align-items:center;
+	flex-direction: column;
   background-color: green;
   width: calc(100% - 50px);
   height: calc(100% - 50px);
